# embedder

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/actions/bump-shared-workflow-version/: action.yml
.github/actions/install-embedder/: action.yml
.github/actions/open-fragments-pr/: action.yml
.github/actions/refresh-local-fragments/: action.yml
.github/actions/upload-fragments/: action.yml
.github/workflows/: intake-issue-clarification.yml  lint.yml  prepare-release.yml  publish-release.yml  spec.yml  update-fragments-shared.yml  update-fragments.yml  update.yml
fragments/: dependabot-updates.yaml  dependabot.yaml  embedder-for-agents.md  embedder-for-readmes.md  message-prefix.md
src/embedder/: __init__.py  __main__.py  blocks.py  cli.py  errors.py  github.py  refs.py  updater.py
src/embedder/formats/: __init__.py  base.py  markdown.py  text.py  yaml.py
src/embedder/providers/: __init__.py  base.py  github.py  local.py
tests/: helpers.py  test_blocks.py  test_cli.py  test_refs.py  test_updater.py
