[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "embedder"
version = "0.2.2"
description = "Dependency-style updater for embedded text fragments."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "rubykatzen" },
]
dependencies = []

[project.scripts]
embedder = "embedder.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/embedder"]

[tool.pytest.ini_options]
pythonpath = ["src"]
